launchpad-buildd (133) UNRELEASED; urgency=medium

  * Liberalise dep-wait matching regexes slightly so that they match
    multi-line output properly, as in the case where multiple
    build-dependencies are uninstallable.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Jul 2015 14:00:16 +0100

launchpad-buildd (132) trusty; urgency=medium

  * Fix incorrect dscpath construction that caused a crash when analysing
    dubious dep-wait cases.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 15 Jul 2015 12:09:08 +0100

launchpad-buildd (131) trusty; urgency=medium

  * slave-prep: Output current sbuild version, now that it's a separate
    package.
  * buildrecipe: Pass --only-source to "apt-get build-dep" to force it to
    use the source package we care about rather than trying to map through
    binary package names.
  * Make sbuild use "sudo -E" rather than just sudo.  It will still filter
    the environment itself, but this means that variables such as
    DEB_BUILD_OPTIONS will be passed through given our standard buildd
    sudoers configuration.
  * Analyse dubious dep-wait cases ("but it is not installed" or "but it is
    not going to be installed") manually to check whether any direct
    build-dependencies are missing, and if so generate an appropriate
    dep-wait (LP: #1468755).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 13 Jul 2015 14:16:11 +0100

launchpad-buildd (130) trusty; urgency=medium

  * Reimplement build-dependency installation for recipes by hand using
    sbuild-like logic, allowing us to drop use of pbuilder (LP: #728494) and
    support :native in recipe build-dependencies (LP: #1322294).
  * Stop cleaning /home/buildd/public_html/ddebs/ and
    /home/buildd/public_html/translations/, now that we're using an sbuild
    that doesn't publish anything there.
  * Drop apache2 dependency, which was only needed for old-style
    ddeb/translation publishing.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 29 Jun 2015 17:56:52 +0100
