@@ -3,6 +3,8 @@ launchpad-buildd (133) UNRELEASED; urgency=medium
   * Liberalise dep-wait matching regexes slightly so that they match
     multi-line output properly, as in the case where multiple
     build-dependencies are uninstallable.
+  * If there is a mix of definite and dubious dep-wait output, then analyse
+    the situation rather than trusting just the definite information.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Jul 2015 14:00:16 +0100
 
